@@ -1,0 +1,1 @@
+lib/Deb/Long/Description.pm usr/share/perl5/Deb/Long
