@@ -1,0 +1,5 @@
+# Dummy Perl module for lintian testing purposes.
+
+package Deb::Long::Description;
+
+return 1;
