@@ -1,0 +1,1 @@
+X: libdeb-long-description-perl: perl-module-name-not-mentioned-in-description Deb::Long::Description
